現状をコミットしとく

--- a/app/keiba_science/src/keiba_science/eda.ipynb
+++ b/app/keiba_science/src/keiba_science/eda.ipynb
@@ -45,22 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "a2a31c8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/naozumi/Desktop/WorkSpace/keiba_ai_app/app/keiba_science/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from google.cloud import bigquery\n",
+    "from google.cloud import storage\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import matplotlib\n",
@@ -80,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "11106efe",
    "metadata": {},
    "outputs": [
@@ -98,14 +90,14 @@
     "client = bigquery.Client()\n",
     "\n",
     "# 取得するデータの範囲を指定する\n",
-    "years = [2023, 2024, 2025]\n",
+    "years = [2023]\n",
     "place_ids = [\"01\", \"02\", \"03\", \"04\", \"05\", \"06\", \"07\", \"08\", \"09\", \"10\"]\n",
     "\n",
     "# クエリを作成する\n",
     "query = \"\"\n",
     "for year in years:\n",
     "    for place_id in place_ids:\n",
-    "        if place_id != \"01\":\n",
+    "        if year != years[0] or place_id != \"01\":\n",
     "            query += \" UNION ALL \"\n",
     "        query += f\"\"\"\n",
     "        SELECT *\n",
@@ -126,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "12e5b910",
    "metadata": {},
    "outputs": [
@@ -198,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "id": "ae2e4175",
    "metadata": {},
    "outputs": [
@@ -266,7 +258,7 @@
        "4  2.0      0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "56c596f5",
    "metadata": {},
    "outputs": [
@@ -288,7 +280,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 2789, number of negative: 35348\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000610 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000613 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 500\n",
       "[LightGBM] [Info] Number of data points in the train set: 38137, number of used features: 7\n",
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "id": "ef7cb88a",
    "metadata": {},
    "outputs": [
@@ -623,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "id": "0db6cbd2",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1232,7 @@
        "2561    4.7  510.0  60.0  3.0  11   0.0  7   4.7      1      0    0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,8 +1243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "bef31a15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "モデルをGCSに保存しました。\n"
+     ]
+    }
+   ],
+   "source": [
+    "# モデルをGCSに保存\n",
+    "model.booster_.save_model('lgbm_model.txt')\n",
+    "storage_client = storage.Client()\n",
+    "bucket_name = 'keiba_ai_models'\n",
+    "bucket = storage_client.bucket(bucket_name)\n",
+    "blob = bucket.blob('lgbm_model.txt')\n",
+    "blob.upload_from_filename('lgbm_model.txt')\n",
+    "print('モデルをGCSに保存しました。')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db3afdaf",
    "metadata": {},
    "outputs": [],
    "source": []
